renamed project to DirectX3DEngine

--- a/DirectX3DEngine/DirectX3DEngine.vcxproj
+++ b/DirectX3DEngine/DirectX3DEngine.vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{12725e23-6a49-4355-bea1-37d0d633889a}</ProjectGuid>
+    <ProjectGuid>{26973A1A-9453-4557-86A8-BCB8B23DE698}</ProjectGuid>
     <RootNamespace>DirectXLearning</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>DirectX3DEngine</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
